# auth

./: .gitignore  pyproject.toml  w.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
frontend/: eslint.config.js  index.html  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: ProtectedRoute.jsx
frontend/src/context/: AuthContext.jsx  ToastContext.jsx
frontend/src/pages/: DashboardPage.jsx  LoginPage.jsx  RegisterPage.jsx
