[project]
name = "react"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.6",
    "django-cors-headers>=4.9.0",
    "django-environ>=0.13.0",
    "djangorestframework>=3.17.1",
    "pytest>=9.1.0",
    "pytest-django>=4.12.0",
    "ruff>=0.15.18",
]
